--- a/evaluacion_1/importaciones/templates/importacion.html
+++ b/evaluacion_1/importaciones/templates/importacion.html
@@ -25,25 +25,30 @@
                                 <input type="number" class="form-control" name="costo_unitario_usd" step="0.01" required min="0">
                             </div>
                         </div>
+                        <div class="form-group">
                             <label class="col-lg-12 py-1 control-label" for="nombre_articulo">Nombre del Artículo:</label>
                             <div class="col-lg-12 py-1">
                                 <input type="text" class="form-control" name="nombre_articulo" required>
                             </div>
+                        </div>
                         <div class="form-group">
                             <label class="col-lg-12 py-1 control-label" for="codigo_articulo">Código del Artículo:</label>
                             <div class="col-lg-12 py-1">
                                 <input type="text" class="form-control" name="codigo_articulo" required>
                             </div>
+                        </div>
                         <div class="form-group">
                             <label class="col-lg-12 py-1 control-label" for="nombre_proveedor">Nombre del Proveedor:</label>
                             <div class="col-lg-12 py-1">
                                 <input type="text" class="form-control" name="nombre_proveedor" required>
                             </div>
+                        </div>
                         <div class="form-group">
                             <label class="col-lg-12 py-1 control-label" for="costo_envio_usd">Costo de Envío a Chile en USD:</label>
                             <div class="col-lg-12 py-1">
                                 <input type="number" class="form-control" name="costo_envio_usd" step="0.01" required min="0">
                             </div>
+                        </div>
                         <div class="form-group">
                             <div class="col-lg-12 py-3">
                                 <input type="submit" class="btn btn-primary" value="Calcular Importación">
@@ -53,10 +58,11 @@
                    
                 </div>
             </div>
+            <div class="col-lg-12 py-1">
+                <a href="{% url 'lista_simulaciones' %}" class="btn btn-secondary col-lg-12">Ver lista de simulaciones</a>
+            </div>
         </div>
-        <div class="col-lg-12 py-1">
-            <a href="{% url 'lista_simulaciones' %}" class="btn btn-secondary">Ver lista de simulaciones</a>
-        </div>
+
     </div>
 </body>
 </html>
